--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <p>I am a skilled Frontend Developer with a focus on Web Security,</p>
              <p>bringing expertise in creating secure and user-friendly web applications.</p>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.facebook.com/vakilov.musa/" target="_blank"><i class='bx bxl-facebook'></i></a>
+                <a href="https://www.linkedin.com/in/musa-vakilov-47b1392a0/" target="_blank"><i class='bx bxl-linkedin'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href= "C:\Users\Admin\Documents\CV MUSA.pdf" target="_blank" class="btn">Download CV</a>
         </div>
         <div id="home-img">
             <img src="Arlanda.jpg" alt="photo">
@@ -105,6 +105,7 @@
             <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
         </div>
     </footer>
+
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
