lagt till ENV-filen

--- a/index.html
+++ b/index.html
@@ -44,7 +44,19 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Frontend Developer!</h3>
-            <p>As a seasoned Frontend Developer with a dedicated focus on Web Security, I bring a wealth of expertise to the table. My passion lies in crafting not only visually appealing but also secure and user-friendly web applications. I thrive on staying at the forefront of technological advancements, ensuring that the solutions I design are not only innovative but also resilient against potential security threats. With a keen eye for detail and a commitment to delivering exceptional user experiences, I am dedicated to pushing the boundaries of what is possible in the dynamic and ever-evolving world of web development. Let's collaborate to build digital experiences that not only meet but exceed expectations, prioritizing both aesthetics and the robustness of security measures.</p>
+            <p>As a seasoned Frontend Developer with a dedicated focus 
+                on Web Security, I bring a wealth of expertise to the table.
+                 My passion lies in crafting not only visually appealing but 
+                 also secure and user-friendly web applications. I thrive on 
+                 staying at the forefront of technological advancements, 
+                 ensuring that the solutions I design are not only innovative 
+                 but also resilient against potential security threats. With 
+                 a keen eye for detail and a commitment to delivering 
+                 exceptional user experiences, I am dedicated to pushing the 
+                 boundaries of what is possible in the dynamic and ever-evolving 
+                 world of web development. Let's collaborate to build digital 
+                 experiences that not only meet but exceed expectations, 
+                 prioritizing both aesthetics and the robustness of security measures.</p>
             <a href="#" class="btn">Read more</a>
         </div>
     </section>
@@ -84,7 +96,7 @@
     </section>
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
-        <form action="http://localhost:3000/send-email" method="post">
+        <form action="http://smtp.strato.com/send-email" method="post">
             <div class="input-box">
                 <input type="text" name="name" placeholder="Full Name">
                 <input type="email" name="email" placeholder="Email Address">
