--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -96,14 +97,15 @@
     </section>
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
-        <form action="http://smtp.strato.com/send-email" method="post">
+        
+        <form action="https://smtp.starto.com/send-email" method="post">
             <div class="input-box">
-                <input type="text" name="name" placeholder="Full Name">
-                <input type="email" name="email" placeholder="Email Address">
+                <input type="text" name="name" placeholder="Full Name" autocomplete="on">
+                <input type="email" name="email" placeholder="Email Address" autocomplete="on"> 
             </div>
             <div class="input-box">
-                <input type="number" name="mobile" placeholder="Mobile Number">
-                <input type="text" name="subject" placeholder="Email Subject">
+                <input type="number" name="mobile" placeholder="Mobile Number" autocomplete="on">
+                <input type="text" name="subject" placeholder="Email Subject" autocomplete="on">
             </div>
             <textarea name="message" id="message" cols="30" rows="10" placeholder="Your Message"></textarea>
             <input type="submit" value="Send Message" class="btn">
@@ -124,4 +126,145 @@
 
     <script src="script.js"></script>
 </body>
+</html>
+-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio website</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+    <header class="header">
+        <a href="#" class="logo">Portfolio</a>
+        <i class='bx bx-menu' id="menu-icon"></i>
+        <nav class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello, It's Me</h3>
+            <h1>Musa Vakilov</h1>
+            <h3>I'm a <span class="multiple-text"></span></h3>
+            <p>I am a skilled Frontend Developer with a focus on Web Security,</p>
+            <p>bringing expertise in creating secure and user-friendly web applications.</p>
+            <div class="social-media">
+                <a href="https://www.facebook.com/vakilov.musa/" target="_blank"><i class='bx bxl-facebook'></i></a>
+                <a href="https://www.linkedin.com/in/musa-vakilov-47b1392a0/" target="_blank"><i
+                        class='bx bxl-linkedin'></i></a>
+            </div>
+            <a href="CV MUSA.pdf" target="_blank" class="btn">Download CV</a>
+        </div>
+        <div id="home-img">
+            <img src="Arlanda.jpg" alt="photo">
+        </div>
+    </section>
+
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="BMW.JPG" alt="photo">
+        </div>
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Frontend Developer with Security Focus</h3>
+            <p>
+                I am a newly graduated frontend developer with a specialization in web security.
+                My passion lies in creating secure, modern, and user-friendly web applications.
+                During my education and internships, I have worked with real-life projects using technologies like
+                HTML, CSS, JavaScript, React, Angular, .NET, RabbitMQ, and REST APIs.
+                One of my key achievements was creating an AI-powered chatbot that supports customer service by
+                retrieving information, generating email templates, and suggesting next steps.
+                I enjoy turning complex problems into intuitive digital solutions and I’m always eager to learn and
+                grow.
+            </p>
+            <a href="https://mynewportfolio111.netlify.app" class="btn">Swedish Portfolio</a>
+        </div>
+    </section>
+
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Latest <span>Projects</span></h2>
+        <div class="tech-stack">
+            <img src="tech-icons/html5.png" alt="HTML5" title="HTML5">
+            <img src="tech-icons/css3.png" alt="CSS3" title="CSS3">
+            <img src="tech-icons/javascript.png" alt="JavaScript" title="JavaScript">
+            <img src="tech-icons/react.png" alt="React" title="React">
+            <img src="tech-icons/angular.png" alt="Angular" title="Angular">
+            <img src="tech-icons/dotnet.png" alt=".NET" title=".NET">
+            <img src="tech-icons/rabbitmq.png" alt="RabbitMQ" title="RabbitMQ">
+            <img src="tech-icons/mysql.png" alt="MySQL" title="MySQL">
+            <img src="tech-icons/restapi.png" alt="REST API" title="REST API">
+        </div>
+
+        <div class="portfolio-container">
+
+            <div class="portfolio-box">
+                <img src="work-1.png" alt="MealApp">
+                <div class="portfolio-layer">
+                    <h4>MealApp</h4>
+                    <p>See my project</p>
+                    <a href="https://mealappreact1.netlify.app" target="_blank">
+                        <i class='bx bx-link-external'></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="work-2.png" alt="Chatiffy">
+                <div class="portfolio-layer">
+                    <h4>Chatiffy.App</h4>
+                    <p>See my project</p>
+                    <a href="https://musa-chatify-app.netlify.app" target="_blank">
+                        <i class='bx bx-link-external'></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="security.png" alt="Chatbot for Customer Service">
+                <div class="portfolio-layer">
+                    <h4>Chatbot for Customer Service</h4>
+                    <p>See my project</p>
+                    <a href="#"><i class='bx bx-lock'></i></a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me</span></h2>
+        <ul class="contact-info">
+            <li>Email: <a href="mailto:musa.vakilov@yahoo.com">musa.vakilov@yahoo.com</a></li>
+            <li> Social Media </li>
+        </ul>
+    </section>
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; | 2024 Vakilov</p>
+        </div>
+        <div class="footer-iconTop">
+            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+        </div>
+    </footer>
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
+    <script src="script.js"></script>
+</body>
+
 </html>
