--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
                 I enjoy turning complex problems into intuitive digital solutions and I’m always eager to learn and
                 grow.
             </p>
-            <a href="https://mynewportfolio111.netlify.app" class="btn">Swedish Portfolio</a>
+            <a href="https://mynewportfolio111.netlify.app" class="btn" target="_blank">Swedish Portfolio</a>
+
         </div>
     </section>
 
